--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -10,7 +10,7 @@
     <body>
         <h3>{{.title}}</h3>
         <h4>m1</h4>
-        <p>用户：{{.user}}</p>
+        <p class="c">用户：{{.user}}</p>
         <p>性别：{{.gender}}</p>
         <p>年龄：{{.age}}</p>
     </body>
